C++/vrcc.h


VRCC_API int VRCC_Start(int argc, char* argv[]);
VRCC_API void VRCC_Shutdown();
VRCC_API int VRCC_Update(void);
VRCC_API void Voisus_ConnectServer(const char* target_ip);
VRCC_API void Voisus_Disconnect();
VRCC_API int Voisus_Error();
VRCC_API void Voisus_Save();
VRCC_API const char* Voisus_LogPath();
VRCC_API const char* Voisus_ClientBuildVersion();
VRCC_API const char* Voisus_ClientMsgVersion();
VRCC_API const char* Voisus_ClientMsgDate();
VRCC_API const char* Voisus_ServerBuildVersion();
VRCC_API const char* Voisus_ServerMsgVersion();
VRCC_API const char* Voisus_ServerMsgDate();
VRCC_API const char* Network_TargetIP();
VRCC_API const char* Network_ClientIP();
VRCC_API int Network_ConnectionStatus();
VRCC_API int Network_ConnectState();
VRCC_API const char* Network_ClientName();
VRCC_API void Network_SetClientName(const char* name);
VRCC_API const char* Network_OperatorId();
VRCC_API const char* Role_Name(int list_index);
VRCC_API const char* Role_Id(int list_index);
VRCC_API const char* Role_NameActive();
VRCC_API const char* Role_IdActive();
VRCC_API const char* Role_NameSet();
VRCC_API const char* Role_IdSet();
VRCC_API const char* EntityState_Name(int list_index);
VRCC_API const char* EntityState_Id(int list_index);
VRCC_API const char* EntityState_NameActive();
VRCC_API const char* EntityState_IdActive();
VRCC_API const char* EntityState_NameSet();
VRCC_API const char* EntityState_IdSet();
VRCC_API const char* Radio_NetName(int radio_index, int net_index);
VRCC_API const char* Radio_NetNameActive(int radio_index);
VRCC_API const char* Radio_NetID(int radio_index, int net_index);
VRCC_API const char * Radio_NetWaveform(int radio_index, int net_index);
VRCC_API const char* Radio_NetIDActive(int radio_index);
VRCC_API const char* Radio_Type(int radio_index);
VRCC_API void Log_Write(const char* function, const char* msg);
VRCC_API const char* Joystick_Name(int list_index);
VRCC_API const char* Call_IDFirst();
VRCC_API const char* Call_IDNext();
VRCC_API const char* Call_Endpoint_IDFirst(const char* call_id);
VRCC_API const char* Call_Endpoint_IDNext(const char* call_id);
VRCC_API const char* Phone_CallActive();
VRCC_API const char* Network_CloudSet();
VRCC_API const char* Network_CloudActive();
VRCC_API int Network_ConnectionMode();
VRCC_API const char* Cloud_IDFirst();
VRCC_API const char* Cloud_IDNext();
VRCC_API const char* Operator_IDFirst();
VRCC_API const char* Operator_IDNext();
VRCC_API const char* Operator_GetField(const char* uuid, const char* field_name);
VRCC_API const char* RadCtrl_Name(int index);
VRCC_API const char* RadCtrl_GetValueStr(const char* name, const char* setting);
VRCC_API const char* RadCtrl_GetOptionsStr(const char* name, const char* setting);
VRCC_API const char* RadCtrl_Error();