C#/VoisusCS/VRCC.cs

namespace VoisusCS
{

    using System;
    using System.Collections.Generic;
    using System.Linq;
    using System.Text;
    using System.Runtime.InteropServices;
    using System.Diagnostics;
    using System.Threading;

    /// <summary>
    /// C# wrapper for the VRCC 
    /// </summary>
    /// <exception cref="DllNotFoundException">Thrown if the VRCC.dll is not in the same runtime directory</exception>
    public static class VRCC
    {
        #region private
        /* These are functions which need redefinitions to be used externally without the safe keyword */
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        extern static int VRCC_Start(int argc, ref IntPtr argv);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_LogPath")]
        extern unsafe static sbyte* Voisus_LogPath_Unsafe ();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ClientBuildVersion")]
        extern unsafe static sbyte* Voisus_ClientBuildVersion_Unsafe ();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ClientMsgVersion")]
        extern unsafe static sbyte* Voisus_ClientMsgVersion_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ClientMsgDate")]
        extern unsafe static sbyte* Voisus_ClientMsgDate_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ServerBuildVersion")]
        extern unsafe static sbyte* Voisus_ServerBuildVersion_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ServerMsgVersion")]
        extern unsafe static sbyte* Voisus_ServerMsgVersion_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Voisus_ServerMsgDate")]
        extern unsafe static sbyte* Voisus_ServerMsgDate_Unsafe();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_TargetIP")]
        extern unsafe static sbyte* Network_TargetIP_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_ClientIP")]
        extern unsafe static sbyte* Network_ClientIP_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_ClientName")]
        extern unsafe static sbyte* Network_ClientName_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_OperatorId")]
        extern unsafe static sbyte* Network_OperatorId_Unsafe();
        
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_Name")]
        extern unsafe static sbyte* Role_Name_Unsafe(int list_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_Id")]
        extern unsafe static sbyte* Role_Id_Unsafe(int list_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_NameActive")]
        extern unsafe static sbyte* Role_NameActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_IdActive")]
        extern unsafe static sbyte* Role_IdActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_NameSet")]
        extern unsafe static sbyte* Role_NameSet_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Role_IdSet")]
        extern unsafe static sbyte* Role_IdSet_Unsafe();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_Id")]
        extern unsafe static sbyte* EntityState_Id_Unsafe(int list_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_NameActive")]
        extern unsafe static sbyte* EntityState_NameActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_Name")]
        extern unsafe static sbyte* EntityState_Name_Unsafe(int list_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_IdActive")]
        extern unsafe static sbyte* EntityState_IdActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_NameSet")]
        extern unsafe static sbyte* EntityState_NameSet_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "EntityState_IdSet")]
        extern unsafe static sbyte* EntityState_IdSet_Unsafe();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_NetName")]
        extern unsafe static sbyte* Radio_NetName_Unsafe(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_NetNameActive")]
        extern unsafe static sbyte* Radio_NetNameActive_Unsafe(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_NetID")]
        extern unsafe static sbyte* Radio_NetID_Unsafe(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_NetWaveform")]
        extern unsafe static sbyte* Radio_NetWaveform_Unsafe(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_NetIDActive")]
        extern unsafe static sbyte* Radio_NetIDActive_Unsafe(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Radio_Type")]
        extern unsafe static sbyte* Radio_Type_Unsafe(int radio_index);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Joystick_Name")]
        extern unsafe static sbyte* Joystick_Name_Unsafe (int list_index);
       
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Call_IDFirst")]
        extern unsafe static sbyte* Call_IDFirst_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Call_IDNext")]
        extern unsafe static sbyte* Call_IDNext_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Call_Endpoint_IDFirst")]
        extern unsafe static sbyte* Call_Endpoint_IDFirst_Unsafe([MarshalAs(UnmanagedType.LPStr)] String call_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Call_Endpoint_IDNext")]
        extern unsafe static sbyte* Call_Endpoint_IDNext_Unsafe([MarshalAs(UnmanagedType.LPStr)] String call_id);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Phone_CallActive")]
        extern unsafe static sbyte* Phone_CallActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_CloudSet")]
        extern unsafe static sbyte* Network_CloudSet_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Network_CloudActive")]
        extern unsafe static sbyte* Network_CloudActive_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Cloud_IDFirst")]
        extern unsafe static sbyte* Cloud_IDFirst_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Cloud_IDNext")]
        extern unsafe static sbyte* Cloud_IDNext_Unsafe();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Operator_IDFirst")]
        extern unsafe static sbyte* Operator_IDFirst_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Operator_IDNext")]
        extern unsafe static sbyte* Operator_IDNext_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "Operator_GetField")]
        extern unsafe static sbyte* Operator_GetField_Unsafe([MarshalAs(UnmanagedType.LPStr)] String uuid, [MarshalAs(UnmanagedType.LPStr)] String field_name);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "RadCtrl_GetValueStr")]
        extern unsafe static sbyte* RadCtrl_GetValueStr_Unsafe([MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPStr)] String setting);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "RadCtrl_GetOptionsStr")]
        extern unsafe static sbyte* RadCtrl_GetOptionsStr_Unsafe([MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPStr)] String setting);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "RadCtrl_Error")]
        extern unsafe static sbyte* RadCtrl_Error_Unsafe();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "RadCtrl_Name")]
        extern unsafe static sbyte* RadCtrl_Name_Unsafe(int index);


        #endregion private

        #region public
        /* These are functions which can be used externally without needing the safe keyword */
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Voisus_ConnectServer([MarshalAs(UnmanagedType.LPStr)] String target_ip);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void VRCC_Shutdown();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int VRCC_Update();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Voisus_Disconnect();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static Error_t Voisus_Error();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Voisus_Save();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Log_Write([MarshalAs(UnmanagedType.LPStr)] String function, [MarshalAs(UnmanagedType.LPStr)] String msg);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Network_SetClientName([MarshalAs(UnmanagedType.LPStr)] String name);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ConnectionStatus_t Network_ConnectionStatus();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ConnectState_t Network_ConnectState();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ConnectionMode_t Network_ConnectionMode();
